# LLMWikiGeneration

./: .gitignore  ARCHITECTURE_REVIEW.md  CLAUDE.md  Home.md  IMPLEMENTATION_PLAN.md  LLM_WIKI_SECOND_BRAIN_BUILD_PLAN.md  OBSIDIAN_SETUP.md  README.md  WIKI_REGISTRY.md  batch_convert_technical_books.py  convert_batch.py  llm-wiki.md  mkdocs.yml  optimized_command_ref_example.md  pyproject.toml  repo_restructuring_plan.md  test_marker.py
docs/: PHILOSOPHY.md  REFERENCE.md  SECOND_BRAIN_DESIGN.md
eval/: harness.py  questions.jsonl  results.jsonl
markdown_output/: 030011_1_online.md  0706.3188v1.md  1-s2.0-S0165410126000194-main.md  1-s2.0-S0167668720300019-main.md  1-s2.0-S0304405X23001393-main.md  1-s2.0-S0378437116000984-main.md  1-s2.0-S1062940824000470-main.md  1-s2.0-S1572308924001542-main.md  1-s2.0-S1875389210002488-main.md  1005.2979v1.md  1208.0806v1.md  1402.2198.md  1604.04173.md  1703.07799.md  1705.01446.md  1806.05101.md  1810.04383v5.md  1904.06019.md  1905.02928.md  1905.03222.md  2002.09025.md  2006.02544.md  2009.14193.md  2010.03051v2.md  2010.09107v15.md  21-BEJ1447.md  2101.02703.md  2106.00170.md  2107.07511v6.md  2110.01052.md  2112.02269v3.md  2201.01330v3.md  2202.07282v1.md  2202.13415.md  2207.04100v4.md  2208.08401.md  2305.12616.md  2307.16895.md  2309.04216v3.md  23322039.2020.1720056.md  (+130 more)
scripts/: migrate.py  wiki_builder.py
tests/: test_config.py  test_dedup.py  test_frontmatter.py  test_manifest.py  test_omega_integration.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_regression.py  test_schemas.py
(+1725 files in other folders)
